SCHEDULING-1679 - Improvements related to the review done by Semen Boikov.