@@ -9,14 +9,11 @@ fi
 BASEDIR=$(cd $(dirname $0);pwd)
 
 LIB=$(dirname $BASEDIR)/lib
-CONF=$(dirname $BASEDIR)/conf
 DIST=$(dirname $BASEDIR)/dist
 
 CLASSPATH=$(find "$LIB" -name '*.jar' -printf '%p:' | sed 's/:$//')
 CLASSPATH=$CLASSPATH:$(find "$DIST" -name '*.jar' -printf '%p:' | sed 's/:$//')
 
 "$JAVA_HOME"/bin/java -classpath $CLASSPATH \
--Djava.security.manager \
--Djava.security.policy="$CONF/java.policy" \
 org.ow2.proactive_grid_cloud_portal.cli.RmEntryPoint "$@"
 
